# cuda-play

./: .gitignore  Makefile  README.md  cuda-dev.yaml  cuda-devbox.yaml  cuda-test.yaml  llama_bench.py  llama_inference.py  llama_web.py  pvc.yaml  pyproject.toml  setup.sh  sync-work.sh  triton_mlp.py  triton_mlp_sweep.py  triton_vadd_bench.py  trtllm_bench.py  trtllm_inference.py  vadd.cu  vllm-qwen.yaml
.cursor/rules/: anti-looping.mdc  autollm-agent-handoff.mdc  test-before-claim.mdc
benchmark/: README.md  bench.py  pyproject.toml  results.md  results_baseten.json  results_large.json
